# computegraph

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
computegraph/: __init__.py  dynamic.py  graph.py  jaxify.py  options.py  types.py  utils.py
computegraph/draw/: README.md  __init__.py  add_edge.py  draw.py  ngraph.py
tests/: test_drawing.py  test_dynamic.py  test_graph.py  test_utils.py
