[tool.poetry]
name = "computegraph"
version = "0.1.1"
readme = "README.md"
license = "BSD-2-Clause"
homepage = "https://github.com/monash-emu/computegraph"
repository = "https://github.com/monash-emu/computegraph"
documentation = "https://github.com/monash-emu/computegraph"
keywords = [
    "graph",
    "networkx",
    "plotting",
    "jax",
]
description = "computegraph is a tool for managing computational graphs using networkx"
authors = ["David Shipman <dshipman@gmail.com>"]
packages = [
    {include = "computegraph"}
]

[tool.poetry.dependencies]
python = ">=3.7.1,<=3.11"
numpy = ">=1.20.3"
networkx = ">=2.6.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^20.8b0"
pytest-parallel = "^0.1.0"
pre-commit = "^2.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
