[tool.poetry]
name = "computegraph"
version = "0.3.5"
readme = "README.md"
license = "BSD-2-Clause"
homepage = "https://github.com/monash-emu/computegraph"
repository = "https://github.com/monash-emu/computegraph"
documentation = "https://github.com/monash-emu/computegraph"
keywords = [
    "graph",
    "networkx",
    "plotting",
    "jax",
    "summerepi"
]
description = "computegraph is a tool for managing computational graphs using networkx"
authors = ["David Shipman <dshipman@gmail.com>"]
packages = [
    {include = "computegraph"}
]

[tool.poetry.dependencies]
python = ">=3.7.0,<3.11"
numpy = ">=1.20.3"
networkx = ">=2.6.2"
scipy = ">=1.7.3"
pygraphviz = {version = ">=1.8", platform = "linux", optional = true}
matplotlib = {version = ">=3.5.1", optional = true}
plotly = {version = ">=5.6.0", optional = true}
jax =  [
    {extras = ["cpu"], version = "^0.3.14", platform = "linux"},
    {extras = ["cpu"], version = "^0.3.14", platform = "darwin"}
]

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^20.8b0"
pytest-parallel = "^0.1.0"
pre-commit = "^2.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.poetry.extras]
plotting = ["pygraphviz", "matplotlib", "plotly"]
